# DualSense4Windows

./: .gitattributes  .gitignore  Build.bat  CMakeLists.txt  CreateVisualSudioSolution.bat  CreateWindowsProject.bat  DualSense4Windows.exe.manifest  LICENSE  README.md  test.html
assets/css/: styles.css
assets/html/: app.html
assets/js/: main.js
include/: App.hxx  Assets.hxx  Base64.hxx  ColorPicker.hxx  Controller.hxx  ControllerKit.hxx  Core.hxx  Discord.hxx  DualSense.hxx  DualSense4Windows.hxx  DualSenseEntryWidget.hxx  DualSenseInfo.hxx  DualSenseList.hxx  DualSenseListEntry.hxx  DualSenseListHeader.hxx  DualShock4.hxx  Interface.hxx  Logger.hxx  MainWindow.hxx  Math.hxx  Squirrel.hxx  Types.hxx  Utils.hxx  Window.hxx  XOne.hxx
lib/: ViGEmClient.lib  hidapi.lib
src/: App.cxx  AssetPacker.cxx  Base64.cxx  ColorPicker.cxx  Controller.cxx  ControllerKit.cxx  Discord.cxx  DualSense.cxx  DualSense4Windows.cxx  DualSenseEntryWidget.cxx  DualSenseList.cxx  DualSenseListEntry.cxx  DualSenseListHeader.cxx  DualShock4.cxx  Interface.cxx  Interface.hxx  MainWindow.cxx  Utils.cxx  XOne.cxx
src/win64/: Interface.cxx
